# prudent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  test.sh  tests-run-default.sh  tests-run-nightly.sh  tests-run.sh  tests-setup-alpine.sh  tests-setup-rustup.sh
.github/workflows/: main.yml
coverage_positive/: fn.rs  md-shared_ref.rs
demos/: Cargo.toml
demos/sneaky_unsafe_stops_compilation/: method_sneaky_unsafe_arg.rs  method_sneaky_unsafe_self_some_args.rs
demos/src/: lib.rs  sneaky_unsafe_stops_compilation.rs  unused_unsafe_fails_lint.rs
demos/src/sneaky_unsafe_stops_compilation/: method_sneaky_unsafe_self_none_args.rs
demos/unused_unsafe_fails_lint/: functn_some_args.rs  method_none_args.rs  method_some_args.rs
demos/verify_error_messages/: Cargo.toml
demos/verify_error_messages/src/: lib.rs
negative_tests/: README.md
negative_tests/sneaky_unsafe_stops_compilation/: Cargo.toml
negative_tests/unused_unsafe_fails_lint/: Cargo.toml
negative_tests/unused_unsafe_fails_lint/src/: lib.rs
negative_tests/verify_error_messages/: Cargo.toml
positive_tests/: README.md
positive_tests/enforce/: Cargo.toml
positive_tests/enforce/src/: lib.rs  mce_config.toml
positive_tests/lint_all/: Cargo.toml
positive_tests/lint_all/src/: mce_config.toml
positive_tests/lint_apply/: Cargo.toml
positive_tests/lint_apply/src/: mce_config.toml
simple_examples/fn_add_four/src/: main.rs
simple_examples/fn_add_three/src/: main.rs
simple_examples/method_one_postfix_param/src/: lib.rs  main.rs
src/: back_end.rs  backend.rs  doctests.rs  front_end.rs  front_end_loader.rs  frontend_linted.rs  frontend_loader.rs  frontend_unlinted.rs  frontend_with_compile_fail_tests.rs  frontend_with_tests.rs  internal_front_end.rs  lib.rs  linted.rs  linted_internal.rs  linted_loader.rs  linted_tests.rs  linted_with_tests.rs  prelude.rs  unlinted.rs
src/doctests/: README.md  sneaky_unsafe_stops_compilation.rs  unsafe_fn_sneaked_unsafe_arg.rs  unsafe_method_sneaked_unsafe_self_some_args.rs  unused_unsafe_fails_lint.rs
src/doctests/sneaky_unsafe_stops_compilation/: README.md  functn_sneaky_unsafe_arg.rs  functn_sneaky_unsafe_fn_expr_none_args.rs  functn_sneaky_unsafe_fn_expr_some_args.rs  method_sneaky_unsafe_arg.rs  method_sneaky_unsafe_self_none_args.rs  method_sneaky_unsafe_self_some_args.rs
src/doctests/unused_unsafe_fails_lint/: functn_none_args.rs  functn_some_args.rs  method_none_args.rs  method_some_args.rs
tests/: unsafe_method_non-copy_shared_ref.rs
verify_no_panic/: Cargo.toml
verify_no_panic/src/: main.rs
verify_panic_never/: Cargo.toml  README.md
verify_panic_never/.cargo/: config.toml
verify_panic_never/src/: main.rs
violation_coverage/format_files/: Cargo.toml
violation_examples/: README.md
violation_examples/method_one_postfix_param/: Cargo.toml
violation_examples/unsafe_fn/some_args/: arg.rs
violation_examples/unsafe_fn/zero_args/: fn_expression.rs
violations_coverage/: README.md
violations_coverage/fn_add_four/: Cargo.toml
violations_coverage/format_files/: README.md
violations_coverage/in_crate/: Cargo.toml  README.md
violations_coverage/in_crate/src/: lib.rs
violations_coverage/unsafe_fn/fn_unused_unsafe/: some_args.rs  zero_args.rs
violations_coverage/unsafe_fn/sneaked_unsafe/: arg.rs  fn_expr_some_args.rs  fn_expr_zero_args.rs
violations_coverage/unsafe_fn/zero_args/: fn_expression.rs
violations_coverage/unsafe_method/fn_unused_unsafe/: some_args.rs  zero_args.rs
violations_coverage/unsafe_method/sneaked_unsafe/: arg.rs  self_some_args.rs  self_zero_args.rs
violations_coverage/unsafe_method/some_args/: arg.rs
violations_coverage/unsafe_method/unused_expect_unsafe/: some_args.rs  zero_args.rs
violations_coverage/unsafe_method/zero_args/: self.rs
violations_coverage/verify_error_messages/: Cargo.toml  README.md  violations
violations_coverage/verify_error_messages/src/: lib.rs
