[package]
name = "prudent"

# On version change, also update src/backend.rs -> assert_version.
version = "0.0.3-delta"

edition = "2021"
# Full functionality and tests need Rust 1.89.0+.
#
# See also .github/workflows/main.yml.
rust-version = "1.71.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Help you make Rust code safer. For both authors and reviewers."

categories = ["development-tools", "no-std", "no-std::no-alloc", "rust-patterns", "security"]

keywords = ["safe", "safety", "unsafe", "isolation", "review"]

repository = "https://github.com/prudent-rs/prudent"
homepage = "https://github.com/prudent-rs/prudent"

# "lints" key is supported only since Rust 1.74.0 (November 2023). But we include this even though
# our rust-version/MSRV is 1.71.0.
[lints.rust]
unexpected_cfgs = { level = "forbid"}
unknown_lints = { level = "forbid"}

[features]
# Check that the method/function/expression is actually unsafe.
#
# Use feature "lint_unused_unsafe" in debug mode (`debug_assertions`) ONLY. Otherwise it fails -
# intentionally.
#
# AND: feature "lint_unused_unsafe" takes LONG to build, because it has to use procedural macros.
lint_unused_unsafe = ["prudent-macros-lint"]

[dependencies]
# We COULD use default-features of `prudent-macros-enforce`, which is just the reverse version
# compatibility check done/initiated by prudent-macros-enforce itself; but we don't need to, because
# we request and accept only an exact version of prudent-macros-enforce with "= ..." version
# specifier.
#
# prudent-macros-enforce is NOT used when you enable feature "lint_unused_unsafe". But it is NOT
# optional - it IS required anyway. Doing it the other way (mutually excluding
# prudent-macros-enforce and prudent-macros-lint) would be difficult and confusing:
#
# - There is no way to conditionally "disable" (or "not enable") a feature in Cargo.toml based on
#   `cfg(debug_assertions)`, see
#   https://doc.rust-lang.org/nightly/cargo/reference/specifying-dependencies.html#platform-specific-dependencies.
# - So, the only way to conditionally **exclude** prudent-macros-enforce somehow in Cargo.toml
#   (without having "build.rs") would be to include it in default-features of prudent, and
#   instructing them to disable default-features of prudent. But then any 3rd party that uses
#   prudent could re-add it simply by forgetting to opt out of default-features of prudent.
prudent-macros-enforce = {path="../prudent-macros-enforce", version="= 0.0.3-delta", default-features = false }
#
prudent-macros-lint = {path="../prudent-macros-lint", version="= 0.0.3-delta", optional = true }

[package.metadata.docs.rs]
# doc.rs builds projects in debug mode. So we enable `lint_unused_unsafe` feature to include the
# `compile_fail` tests from demos/unused_unsafe_fails_lint/
#
# That does mean that docs.rs does NOT use `prudent-macros-enforce` (even though it's still loaded).
# But that's OK, since that is tested by GitHub Actions CI, which tests both alternatives.
features = ["lint_unused_unsafe"]
# One target is OK. Prudent is platform-independent.
default-target = "x86_64-unknown-linux-gnu"
