[package]
name = "prudent"

# On version change, also update src/backend.rs -> assert_version.
version = "0.0.4"

edition = "2021"
# Full functionality and tests need Rust 1.89.0+.
#
# See also .github/workflows/main.yml.
rust-version = "1.71.0"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Help you make Rust code safer. For both authors and reviewers."

categories = ["development-tools", "no-std", "no-std::no-alloc", "rust-patterns", "security"]

keywords = ["safe", "safety", "unsafe", "isolation", "review"]

repository = "https://github.com/prudent-rs/prudent"
homepage = "https://github.com/prudent-rs/prudent"

# "lints" key is supported only since Rust 1.74.0 (November 2023). But we include this even though
# our rust-version/MSRV is 1.71.0.
[lints.rust]
unexpected_cfgs = { level = "forbid"}
unknown_lints = { level = "forbid"}

[features]
# Apply lints (conditionally or unconditionally) that the method/function/expression IS actually
# unsafe.
#
# - Use features "lint_unused_unsafe" or "lint_unused_unsafe_all" in debug mode (`debug_assertions`)
#   ONLY. Otherwise they fail - intentionally.
# - AND: Use them with `cargo check` or `cargo check --tests` ONLY. NOT with `cargo build`, not with
#   `cargo run`, not with `cargo test` - they CANNOT be LINKED, to prevent accidental use.
# - AND: they take LONGER to compile, because they have to use procedural macros.
lint_unused_unsafe = ["dep:prudent-macros-lint", "dep:no-link"]
lint_unused_unsafe_all = ["lint_unused_unsafe", "prudent-macros-lint/lint_unused_unsafe_all"]

#default = ["lint_unused_unsafe"]

[dependencies]
# We CAN use feature `use_with_prudent_only` of `prudent-macros-enforce` (included in its
# `default-features`), which is just the reverse compatibility check done/initiated by
# prudent-macros-enforce itself; BUT we DON'T HAVE TO, because we request and accept only an exact
# version of prudent-macros-enforce with "= ..." version specifier. However, to be on the safe side,
# we DO use `use_with_prudent_only` anyway.
#
# `prudent-macros-enforce` is NOT used when you enable feature "lint_unused_unsafe". But it is NOT
# optional - it IS required anyway. Doing it the other way (mutually excluding
# `prudent-macros-enforce` and `prudent-macros-lint`) would be difficult and confusing:
#
# - There is no way to conditionally "disable" (or "not enable") a feature in Cargo.toml based on
#   `cfg(debug_assertions)`, see
#   https://doc.rust-lang.org/nightly/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
#   > "same applies to cfg(debug_assertions)... currently no way to add dependencies based on these
#   configuration values.""
#
# - So, the only ways to conditionally **exclude** `prudent-macros-enforce` somehow in Cargo.toml
#   (without having "build.rs") would be either to include it in `default-features` of `prudent`,
#   and instructing them to disable `default-features` of `prudent`. But then any 3rd party that
#   uses prudent could re-add it simply by forgetting to opt out of `default-features` of prudent.
#   
#   We could NOT have two mutually exclusive features, like `lint_unused_unsafe` and
#   `dont_lint_unused_unsafe`, with a requirement to choose exactly one of them. Why? Because other
#   crates using `prudent` would also have to choose one of those two features, and then we'd have a
#   conflict.
#   
#   But, there's no real need to exclude `prudent-macros-enforce`, because it's lightweight.

prudent-macros-enforce = {version="= 0.0.4", features=["use_with_prudent_only"]}
# For local development:
#
#prudent-macros-enforce = {path="../prudent-macros-enforce", version="= 0.0.4", features=["use_with_prudent_only"] }

prudent-macros-lint = {version="= 0.0.4", optional = true }
# For local development:
#
#prudent-macros-lint = {path="../prudent-macros-lint", version="= 0.0.4", optional = true }

no-link = {version="0.2.0", optional = true }

[package.metadata.docs.rs]
# doc.rs builds projects in debug mode, but **without** `lint_unused_unsafe` feature. We **could**
# enable `lint_unused_unsafe` feature, but there's no benefit. It's actually better not to, as then
# - docs.rs generation is faster (no need to process proc macros), and
# - the generated docs have `macro_rules`-based patterns for the macros.
#
# `lint_unused_unsafe` feature is tested by GitHub Actions CI anyway.
#
# One target is OK. Prudent is platform-independent. x86_64-unknown-linux-gnu is the native target
# on docs.rs backend.
default-target = "x86_64-unknown-linux-gnu"
all-features = true
