[package]
name = "verify_error_messages"
version = "0.1.0"
edition = "2024"

# As of trybuild v1.0.116, the following would NOT apply:
#
# [features]
#
# lint_unused_unsafe = ["prudent/lint_unused_unsafe"]
#
# if we have "prudent" in ONLY [dependencies] but NOT in [dev-dependencies]. Prudent WOULD be still
# available as a dev dependency, but its feature "lint_unused_unsafe" would NOT be set!
#
# We could hard-code `features = ["lint_unused_unsafe"]` for `prudent` entry in [dev-dependencies].
# But, instead, we have the feature, AND we add `prudent` as a dependency in both [dependencies] and
# [dev-dependencies.]

[features]
lint_unused_unsafe = ["prudent/lint_unused_unsafe"]

[dependencies]
prudent = {path = "../..", version="0.0.3"}

[dev-dependencies]
trybuild = "1.0"
prudent = {path = "../..", version="0.0.3"}
